--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10015,7 +10015,7 @@ h3 {
   flex-direction: column;
 }
 .list-container__content__master {
-  color: gray;
+  color: #cad48f;
   font-style: italic;
 }
 .list-container__content__truck {
