--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -9,7 +9,7 @@
         align-items: flex-start;
         flex-direction: column;
         &__master {
-            color: gray;
+            color: rgb(202, 212, 143);
             font-style: italic;
         }
         &__truck {
