--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10029,3 +10029,42 @@ h3 {
 .list-container__buttons * {
   margin: 0 5px;
 }
+
+fieldset {
+  border: 1px solid gray;
+  padding: 5px;
+  margin: 0 5px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+fieldset label {
+  margin: 0 5px 0 0;
+}
+fieldset input {
+  margin: 0 15px 0 0;
+}
+
+legend {
+  font-size: 10px;
+  margin: 0 10px;
+  display: inline;
+  width: 70px;
+  text-align: center;
+}
+
+.sort-form {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+.sort-form button {
+  font-size: 10px;
+  margin-top: 15px;
+  margin-left: 15px;
+}
+.sort-form a {
+  font-size: 10px;
+  margin-top: 15px;
+  margin-left: 15px;
+}
