--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -25,3 +25,42 @@
         }
     }
 }
+
+fieldset {
+    border: 1px solid gray;
+    padding: 5px;
+    margin: 0 5px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    label {
+        margin:0 5px 0 0;
+    }
+    input {
+        margin:0 15px 0 0;
+    }
+}
+
+legend {
+    font-size: 10px;
+    margin: 0 10px;
+    display: inline;
+    width: 70px;
+    text-align: center;
+}
+
+.sort-form {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    button {
+        font-size: 10px;
+        margin-top: 15px;
+        margin-left: 15px; 
+    }
+    a {
+        font-size: 10px;
+        margin-top: 15px;
+        margin-left: 15px; 
+     }
+}
