--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -64,3 +64,10 @@ legend {
         margin-left: 15px; 
      }
 }
+
+.list-container__photo {
+    img {
+        width: 200px;
+        height: auto;
+    }
+}
